list icon alignment fix

--- a/app/scss/components/list.scss
+++ b/app/scss/components/list.scss
@@ -21,7 +21,7 @@
 
   &__icon {
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: bottom;
     margin-right: 10px;
   }
 
